--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,29 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.16.0/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.16.0/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyBlgX0NuTuVdpcX-lUDwgiuzJYqu6BhXIU",
+        authDomain: "filmes-favoritos-cd871.firebaseapp.com",
+        databaseURL: "https://filmes-favoritos-cd871-default-rtdb.firebaseio.com",
+        projectId: "filmes-favoritos-cd871",
+        storageBucket: "filmes-favoritos-cd871.appspot.com",
+        messagingSenderId: "407555746579",
+        appId: "1:407555746579:web:a66fa96cd4e7dd966248e6",
+        measurementId: "G-MR3W0KMWLH"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
   </body>
 </html>
